# PrimedSteam

./: .gitignore  BUILDING-LINUX.md  CMakeLists.txt  README.md
CMake/: PrimeGunSeedUserDefaults.cmake
Data/User/GameSettingsVR/: GM8E01.ini
Flatpak/: dolphin-emu-wrapper  org.DolphinEmu.dolphin-emu.yml
Source/Core/Common/VR/: OpenXRInputState.h
Source/Core/Core/HW/: GCPadEmu.cpp
Source/Core/Core/PrimeGun/: NativeRuntime.cpp  NativeRuntime.h
Source/Core/Core/PrimedGun/: NativeRuntime.cpp
Source/Core/DolphinQt/: CMakeLists.txt  MainWindow.cpp
Source/Core/DolphinQt/Debugger/: CullingCodeFinderWidget.cpp
Source/Core/VideoBackends/D3D/: D3DOpenXR.cpp
Source/Core/VideoBackends/Vulkan/: VulkanOpenXR.cpp  VulkanOpenXR.h
Source/Core/VideoCommon/: ElementsGroupManager.cpp  ShaderHunter.cpp
Source/Core/VideoCommon/VR/: PrimeGunOverlayCommon.h
assets/gecko/: GM8E01_PrimedGun.ini  MetroidPrime_CenterEyeViewport.example.ini
assets/readme/: primedgun-hero.jfif
scripts/: build-linux.sh
src/: PrimedGun.rc  gui.h  main.cpp  openvr_manager.h  resource.h  settings.h  tracking_math.h
src/dolphin_hook/: DolphinXrBridge.cpp  DolphinXrBridge.h  GameTimingHooks.cpp  GameTimingHooks.h  GraphicsHooks.cpp  GraphicsHooks.h  HookRuntime.cpp  HookRuntime.h  Ipc.cpp  Ipc.h  JitHooks.cpp  JitHooks.h  OpenXrHooks.cpp  OpenXrHooks.h  VulkanHooks.cpp  VulkanHooks.h  dllmain.cpp
src/hook_common/: PrimedGunShared.h
src/launcher/: main.cpp
